[package]
name = "polynomial_commitments-scratch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
num-bigint = { version = "0.4.4", features = ["rand"]}
log = "0.4.20"
env_logger = "0.10.0"
blstrs = "0.7.1"
bls12_381 = { version = "0.8.0", features = ["groups"]}
num-traits = "0.2.16"
group = "0.13.0"
